--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ install:
 - git clone --recursive https://github.com/getpelican/pelican-plugins
 - pip install pelican ghp-import
 script:
-- ls
-- ls content
 - make publish
 - ls
-- ls content
+- ls output
 - make publish github
