--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: python
+python:
+  - "3.5"
 branches:
   only:
   - sources
@@ -6,8 +8,8 @@ env:
   global:
     secure: "R00A9bK1kY46EjJHvftO0N3RKcELVaeb0EnGPdJ00Iqd4ltd9LhrJHR5FuQIX8rV3H78w99AScM6CeU4Rp1MJ9yV0fN+84HFLa+zkLPzLUZXC3ViZEkd5AjhTV5cjm+ZrJIBHCkD2Jwe08pmcNqjKdO0sBRuhkwAJq01fhe1FgA="
 install:
-- git clone --recursive https://github.com/getpelican/pelican-plugins
 - pip install pelican ghp-import
+- git clone --recursive https://github.com/getpelican/pelican-plugins
 script:
 - make publish
 - ls
