Fix travis: install markdown

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ env:
   global:
     secure: "R00A9bK1kY46EjJHvftO0N3RKcELVaeb0EnGPdJ00Iqd4ltd9LhrJHR5FuQIX8rV3H78w99AScM6CeU4Rp1MJ9yV0fN+84HFLa+zkLPzLUZXC3ViZEkd5AjhTV5cjm+ZrJIBHCkD2Jwe08pmcNqjKdO0sBRuhkwAJq01fhe1FgA="
 install:
-- pip install pelican ghp-import
+- pip install markdown pelican ghp-import
 - git clone --recursive https://github.com/getpelican/pelican-plugins
+- pelican --version
 script:
 - make publish
 - ls
+- ls content
 - ls output
 - make publish github
