--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: python
 python:
-  - "3.5"
+- '3.5'
 sudo: required
 services:
-  - docker
+- docker
 branches:
   only:
   - sources
 env:
   global:
-    secure: "R00A9bK1kY46EjJHvftO0N3RKcELVaeb0EnGPdJ00Iqd4ltd9LhrJHR5FuQIX8rV3H78w99AScM6CeU4Rp1MJ9yV0fN+84HFLa+zkLPzLUZXC3ViZEkd5AjhTV5cjm+ZrJIBHCkD2Jwe08pmcNqjKdO0sBRuhkwAJq01fhe1FgA="
+  - secure: "CLYWAWWMUOG0ZVmsmt3Qk840p+JBN/CU2MWOHWyRabB7UYBo3FQtf4JAMsm0AaSIAThAZzn07hpAeq/6vHG1BTqqd8DE92/scd56bUxZBHxhqKaLnnct/YpklAyi/B1h8prb+KcyN8t2Qs6s9t6Ber8ea69EeJm7hOIT/6M+HSs="
 install:
 - pip install ghp-import
 - git clone https://github.com/getpelican/pelican-plugins
